[gd_scene load_steps=58 format=3 uid="uid://05gp17st7o1v"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_4t26c"]
[ext_resource type="Texture2D" uid="uid://okqdccaqcm3w" path="res://art/characters/player.png" id="2_nyakl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lhog3"]
atlas = ExtResource("2_nyakl")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_njono"]
atlas = ExtResource("2_nyakl")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rv8b"]
atlas = ExtResource("2_nyakl")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_40xm0"]
atlas = ExtResource("2_nyakl")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4tam"]
atlas = ExtResource("2_nyakl")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6h0l"]
atlas = ExtResource("2_nyakl")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hinj"]
atlas = ExtResource("2_nyakl")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xily"]
atlas = ExtResource("2_nyakl")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrh7u"]
atlas = ExtResource("2_nyakl")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6q73"]
atlas = ExtResource("2_nyakl")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhhd2"]
atlas = ExtResource("2_nyakl")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ucui"]
atlas = ExtResource("2_nyakl")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5flh"]
atlas = ExtResource("2_nyakl")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eysdr"]
atlas = ExtResource("2_nyakl")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_boht3"]
atlas = ExtResource("2_nyakl")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_310wm"]
atlas = ExtResource("2_nyakl")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_stvek"]
atlas = ExtResource("2_nyakl")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6tbo"]
atlas = ExtResource("2_nyakl")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncoe1"]
atlas = ExtResource("2_nyakl")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikwrd"]
atlas = ExtResource("2_nyakl")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2p17"]
atlas = ExtResource("2_nyakl")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxwo7"]
atlas = ExtResource("2_nyakl")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm2hp"]
atlas = ExtResource("2_nyakl")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_500xm"]
atlas = ExtResource("2_nyakl")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3qt7"]
atlas = ExtResource("2_nyakl")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_exa56"]
atlas = ExtResource("2_nyakl")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k645"]
atlas = ExtResource("2_nyakl")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp7jv"]
atlas = ExtResource("2_nyakl")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w3uy"]
atlas = ExtResource("2_nyakl")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke6ys"]
atlas = ExtResource("2_nyakl")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih14l"]
atlas = ExtResource("2_nyakl")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjp41"]
atlas = ExtResource("2_nyakl")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff3le"]
atlas = ExtResource("2_nyakl")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmacv"]
atlas = ExtResource("2_nyakl")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yctc"]
atlas = ExtResource("2_nyakl")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_goqom"]
atlas = ExtResource("2_nyakl")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_447o0"]
atlas = ExtResource("2_nyakl")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sm4r"]
atlas = ExtResource("2_nyakl")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0bd6"]
atlas = ExtResource("2_nyakl")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7g4e"]
atlas = ExtResource("2_nyakl")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b6yf"]
atlas = ExtResource("2_nyakl")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd43j"]
atlas = ExtResource("2_nyakl")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0se5"]
atlas = ExtResource("2_nyakl")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt01x"]
atlas = ExtResource("2_nyakl")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k442s"]
atlas = ExtResource("2_nyakl")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j6dl"]
atlas = ExtResource("2_nyakl")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi6co"]
atlas = ExtResource("2_nyakl")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4ayc"]
atlas = ExtResource("2_nyakl")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c26p"]
atlas = ExtResource("2_nyakl")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_knuw3"]
atlas = ExtResource("2_nyakl")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yegsy"]
atlas = ExtResource("2_nyakl")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_xjnyy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhog3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njono")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rv8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40xm0")
}],
"loop": true,
"name": &"back_atack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4tam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6h0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hinj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xily")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrh7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6q73")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhhd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ucui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5flh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eysdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boht3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_310wm")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_stvek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6tbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncoe1")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikwrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2p17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxwo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm2hp")
}],
"loop": true,
"name": &"front_atack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_500xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3qt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exa56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k645")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp7jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w3uy")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke6ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih14l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjp41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff3le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmacv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yctc")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_goqom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_447o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sm4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0bd6")
}],
"loop": true,
"name": &"side_atack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7g4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b6yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd43j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0se5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt01x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k442s")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j6dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi6co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4ayc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c26p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knuw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yegsy")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tbvnw"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xqxm5"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c5pv6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_at2t1"]
radius = 5.0

[node name="player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_4t26c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xjnyy")
animation = &"front_idle"
offset = Vector2(0, -15)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_tbvnw")
metadata/_edit_lock_ = true

[node name="player_hitbox" type="Area2D" parent="."]
visible = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource("CircleShape2D_xqxm5")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack" type="Timer" parent="."]
wait_time = 0.5

[node name="world_camera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 720
limit_bottom = 350
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="cliff_camera" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
limit_left = 0
limit_top = 0
limit_right = 270
limit_bottom = 280
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="healthBar" type="ProgressBar" parent="."]
modulate = Color(0.94902, 0.501961, 0.219608, 1)
offset_left = -9.0
offset_top = -25.0
offset_right = 171.0
offset_bottom = 5.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regen_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Direction" type="Marker2D" parent="."]
visible = false
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="ActionableFinder" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/ActionableFinder"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_c5pv6")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_at2t1")

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack" to="." method="_on_deal_attack_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
